# MSc_GBDA-OV_Temporal_Change_Retrieval

./: .gitattributes  .gitignore  AUDIT.md  INVENTORY.md  LAPTOP_RUNBOOK.md  LICENSE  LOCAL_TASKS.md  NEXT_GBDA_STEPS.md  QUICKSTART.md  README.md  REPORT.md  STATUS.md  app.py  main.tex  make_inventory.ps1  make_inventory.sh  project_instructions.md  pyproject.toml  qwen_agent_project_plan.md  references.bib  requirements.txt
assets/: .gitkeep
docs/: ARCHITECTURE.md  Common_Resources.md  DATA_EXPANSION_PLAN.md  EXTENSIONS.md  GBDA_Case11_Overview.md  QFABRIC_FUTURE_WORK.md  UX_DESIGN.md
feature_3m_native/: README.md  cv_eval_planet3m.py  jpeg_ablation.py  temporal_pinpoint.py
inventory/: cloud.md  laptop-4060.md  macbook.md
latex/: main.tex  references.bib
models/: dynamic_earthnet__clip_vitl14__adapter.pt  dynamic_earthnet__georsclip__adapter.pt  dynamic_earthnet__georsclip_concatenate__adapter.pt  dynamic_earthnet__remoteclip__adapter.pt  dynamic_earthnet_planet__clip_vitl14__adapter.pt  qfabric_teo__clip_vitl14__adapter.pt  qfabric_teo__georsclip__adapter.pt  qfabric_teo__remoteclip__adapter.pt
ops/: make_inventory.ps1  make_inventory.sh
report/: main.tex  references.bib
results/: concat_eval.txt  cv_eval__clip_vitl14__nrg__zero_shot.json  cv_eval__clip_vitl14__nrg__zero_shot__fraction.json  cv_eval__clip_vitl14__rgb__planet3m.json  cv_eval__georsclip__nrg__zero_shot.json  cv_eval__georsclip__nrg__zero_shot__fraction.json  cv_eval__georsclip__nrg__zero_shot__fraction__ens.json  cv_eval__georsclip__rgb__zero_shot.json  cv_eval__georsclip__rgb__zero_shot__fraction.json  cv_eval__remoteclip__nrg__zero_shot.json  cv_eval__remoteclip__nrg__zero_shot__fraction.json  dynamic_earthnet__clip_vitl14__test__ndvi__naive.json  dynamic_earthnet__clip_vitl14__test__ndvi__zero_shot.json  dynamic_earthnet__clip_vitl14__test__nrg__naive.json  dynamic_earthnet__clip_vitl14__test__nrg__zero_shot.json  dynamic_earthnet__clip_vitl14__test__rgb__naive.json  dynamic_earthnet__clip_vitl14__test__rgb__peft.json  dynamic_earthnet__clip_vitl14__test__rgb__zero_shot.json  dynamic_earthnet__clip_vitl14__train__ndvi__naive.json  dynamic_earthnet__clip_vitl14__train__ndvi__zero_shot.json  dynamic_earthnet__clip_vitl14__train__nrg__naive.json  dynamic_earthnet__clip_vitl14__train__nrg__zero_shot.json  dynamic_earthnet__clip_vitl14__train__rgb__naive.json  dynamic_earthnet__clip_vitl14__train__rgb__peft.json  dynamic_earthnet__clip_vitl14__train__rgb__zero_shot.json  dynamic_earthnet__clip_vitl14__val__ndvi__naive.json  dynamic_earthnet__clip_vitl14__val__ndvi__zero_shot.json  dynamic_earthnet__clip_vitl14__val__nrg__naive.json  dynamic_earthnet__clip_vitl14__val__nrg__zero_shot.json  dynamic_earthnet__clip_vitl14__val__rgb__naive.json  dynamic_earthnet__clip_vitl14__val__rgb__peft.json  dynamic_earthnet__clip_vitl14__val__rgb__zero_shot.json  dynamic_earthnet__georsclip__test__ndvi__naive.json  dynamic_earthnet__georsclip__test__ndvi__zero_shot.json  dynamic_earthnet__georsclip__test__nrg__naive.json  dynamic_earthnet__georsclip__test__nrg__zero_shot.json  (+108 more)
scripts/: _figutil.py  (+31 more)
(+132 files in other folders)
