[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open_vocabulary_temporal_change_retrieval"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "torch",
  "torchvision",
  "transformers",
  "numpy<2",
  "mlflow>=3.11.1",
  "pytest>=9.0.3",
  "faiss-cpu>=1.13.2",
  "gradio>=6.14.0",
  "coverage>=7.13.5",
  "open-clip-torch>=2.24.0",
  "peft>=0.10.0",
  "gdown>=5.1.0",
  "rasterio>=1.3.0",
  "pandas[parquet]>=2.0.0",
  "pyarrow>=15.0.0",
  "pillow>=10.0.0",
  "opencv-python>=4.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true

[tool.pytest.ini_options]
# scripts/ is a regular package used by tests/conftest.py but deliberately
# excluded from the installed library. Add repo root to sys.path so the
# test suite can import both `src.*` and `scripts.*` regardless of whether
# the package is pip-installed.
pythonpath = ["."]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true